gcc/testsuite/rust/rustc/ui/parser/suggest-semi-in-array_dg.rs
fn main() {
    let v = [1
    2];
// { dg-error "" "" { target *-*-* } .-1 }
}

